--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
         tools:layout_editor_absoluteX="8dp">
 
     <com.google.android.material.tabs.TabLayout
@@ -38,6 +38,12 @@
 
     </com.google.android.material.tabs.TabLayout>
 
+
     </androidx.viewpager.widget.ViewPager>
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"/>
 
 </LinearLayout>
